# lidar-slam-hdmap

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
benchmarks/: accuracy_table.csv  benchmark_manifest.json  nuscenes_ape.csv  runtime_profile_baseline.md  runtime_profile_baseline_200f.csv  runtime_profile_baseline_200f.md  runtime_profile_stride1-baseline.csv  runtime_profile_stride1-baseline.md  runtime_profile_stride1-cache.csv  runtime_profile_stride1-cache.md
configs/: default.yaml  sup09_docker.yaml
docker/: Dockerfile.sup09
ros2_ws/src/lidar_slam_ros2/: package.xml  setup.cfg  setup.py
ros2_ws/src/lidar_slam_ros2/config/: slam_params.yaml
ros2_ws/src/lidar_slam_ros2/launch/: slam.launch.py
ros2_ws/src/lidar_slam_ros2/lidar_slam_ros2/: __init__.py  kitti_player_node.py  odom_node.py  pc2_utils.py  pose_graph_node.py
ros2_ws/src/lidar_slam_ros2/rviz/: slam.rviz
scripts/: audit_baseline_configs.py  benchmark_stage5.py  compare_tight_vs_loose.py  derive_baseline_extrinsic.py  diagnose_sup07_turns.py  eval_nuscenes.py  eval_sup07.py  evaluate_odometry.py  package_sup09_subset.py  plot_sup07.py  profile_stages.py  run_baseline_compare.py  run_pipeline.py  run_sup06.py  sup08_acceptance.sh  sup08_install_ros2.sh  sup09_acceptance.sh  sup09_entrypoint.sh  sup09_report.py  tune_sup07.py  verify_kitti.py
tests/: test_benchmarks.py  test_data_loader.py  test_degeneracy.py  test_export.py  test_imu_factor.py  test_integration_kitti.py  test_mapping.py  test_nuscenes_loader.py  test_odometry.py  test_optimization.py
(+31 files in other folders)
