<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_slam_ros2</name>
  <version>0.1.0</version>
  <description>SUP-08: ROS2 Humble wrapping of v3 Stage 2 (KISS-ICP) and Stage 3 (GTSAM pose graph + Scan Context loop closure). Subscribes to sensor_msgs/PointCloud2 and publishes nav_msgs/Odometry + TF.</description>

  <maintainer email="haotian.zha@gmail.com">Haotian Zha</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
